--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,19 @@ description = "Local code search engine, index, and working memory for AI agents
 license = "MIT"
 
 [dependencies]
+anyhow = "1.0.102"
+blake3 = "1.8.3"
+chrono = { version = "0.4.43", features = ["serde"] }
 clap = { version = "4.5.60", features = ["derive"] }
+ignore = "0.4.25"
+rusqlite = { version = "0.38.0", features = ["bundled"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+toml = "1.0.3"
+tree-sitter = "0.24"
+tree-sitter-c = "0.23"
+tree-sitter-go = "0.23"
+tree-sitter-javascript = "0.23"
+tree-sitter-python = "0.23"
+tree-sitter-rust = "0.23"
+tree-sitter-typescript = "0.23"
