--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ blake3 = "1.8.3"
 chrono = { version = "0.4.43", features = ["serde"] }
 clap = { version = "4.5.60", features = ["derive"] }
 ignore = "0.4.25"
+regex = "1.12.3"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
@@ -22,3 +23,4 @@ tree-sitter-javascript = "0.23"
 tree-sitter-python = "0.23"
 tree-sitter-rust = "0.23"
 tree-sitter-typescript = "0.23"
+ureq = { version = "3.2.0", features = ["json"] }
