--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ tree-sitter-python = "0.23"
 tree-sitter-rust = "0.23"
 tree-sitter-typescript = "0.23"
 ureq = { version = "3.2.0", features = ["json"] }
+
+[dev-dependencies]
+tempfile = "3.25.0"
